# can_analiz

./: CMakeLists.txt  a.out  analiz_can  checking_err.c  main.c  main.h  measuremet_HB.txt  readme.md  readme.txt
.cache/clangd/index/: checking_err.c.464046C0F099CA4F.idx  checking_err.c.63494E9C045225D6.idx  checking_err.h.143385C09E7986C9.idx  main.c.134F43F2AC99BAFC.idx  main.c.15D38DAFC0581E28.idx  main.h.011556CEED1F065C.idx  main.h.98D914A21E00F54C.idx
include/: checking_err.h  main.h
src/: checking_err.c  main.c
